kubernetes/base/catalogue/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalogue
  labels:
    app: catalogue
    component: api
spec:
  type: ClusterIP
  selector:
    app: catalogue
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
