kubernetes/base/catalogue/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalogue
  labels:
    app: catalogue
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-cloudflare"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - catalogue.home-lab.webdemoapp.com
      secretName: catalogue-tls
  rules:
    - host: catalogue.home-lab.webdemoapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: catalogue
                port:
                  number: 5000
